datatable needs more space!

--- a/header_style.CSS
+++ b/header_style.CSS
@@ -2,7 +2,7 @@
   width: 1100px;
   height: 620px;
   padding-left: -60px;
-  background-image: url('C:\Users\Leonardo\Downloads\UniBA\Spoke 7\Package presentation\presentation\docs\GRINS_template_v2.png');
+  background-image: url('GRINS_template_v2.png');
   background-size: contain;  
   background-position: center;
   background-repeat: no-repeat;
